# AutoDiff

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: coverage.yml  test.yml
AutoDiff/: AutoDiff.py  DualNumber.py  ElementFunction.py  feature.py
docs/: README.md  documentation.md
tests/: check_coverage.sh  run_test.sh  test_AutoDiff.py  test_DualNumber.py  test_ElementFunction.py  test_feature.py
usage/: grad_descent.py  use_basic.py
